Set up info in HTML

--- a/index.html
+++ b/index.html
@@ -18,64 +18,59 @@
   </div>
 
   <header>
-    <img src="" alt="photo" class="profile-image">
-    <p class=""></p>
+    <img src="img/responsive-layout-profile.png" alt="photo" class="profile-image">
+    <p>"I am a front-end developer who loves responsive designa and css. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!"</p>
   </header>
 
   <main class="flex">
+
     <div class="card">
-      <h2></h2>
-      <p></p>
-      <img src="" alt="" class="">
-      <p></p>
+      <img src="img/portfolio-1.png" alt="marketing page" class="photos">
+      <h2>Marketing Page</h2>
+      <p>This project shows the front page of a marketing website meant for a specific business I'm interesed in.</p>
     </div>
 
     <div class="card">
-      <h2></h2>
-      <p></p>
-      <img src="" alt="" class="">
-      <p></p>
+      <img src="img/portfolio-2.png" alt="search page" class="photos">
+      <h2>Search Page</h2>
+      <p>This project searches through a specific database to find information that the iser is trying to look up.</p>
     </div>
 
     <div class="card">
-      <h2></h2>
-      <p></p>
-      <img src="" alt="" class="">
-      <p></p>
+      <img src="img/portfolio-3.png" alt="travel app" class="photos">
+      <h2>Travel App</h2>
+      <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
     </div>
 
     <div class="card">
-      <h2></h2>
-      <p></p>
-      <img src="" alt="" class="">
-      <p></p>
+      <img src="img/portfolio-4.png" alt="map of favorites" class="photos">
+      <h2>Map of Favorite Spots</h2>
+      <p>This project uses mapping for my favorite spots in the city for a do-it-yourself walking tour.</p>
     </div>
 
     <div class="card">
-      <h2></h2>
-      <p></p>
-      <img src="" alt="" class="">
-      <p></p>
+      <img src="img/portfolio-5.png" alt="photo gallery" class="photos">
+      <h2>Photo Gallery</h2>
+      <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
     </div>
 
     <div class="card">
-      <h2></h2>
-      <p></p>
-      <img src="" alt="" class="">
-      <p></p>
+      <img src="img/portfolio-6.png" alt="calculator" class="photos">
+      <h2>Calculator</h2>
+      <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
     </div>
 
-    <div class="card">
-      <h2></h2>
-      <p></p>
-      <img src="" alt="" class="">
-      <p></p>
+    <div class="">
+      <h2>Contact</h2>
+      <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+      <p>Phone +(111)555-1234</p>
+      <p>Email email@lala.com</p>
     </div>
-
 
   </main>
   <footer>
-    <p class="copyright">Copyright 2019 Nikki Turrisi</p>
+    <p> Nikki Turrisi</p>
+    <p> Back To Top </p>
   </footer>
   </body>
 </html>
