--- a/index.html
+++ b/index.html
@@ -1,77 +1,94 @@
 <!DOC TYPE html>
 <html lang="en">
   <head>
-    <title>Nikki Turrisi</title>
+    <title>Responsive Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
 
-    <div class="main-nav">
-      <ul class="nav">
-        <li class="name">Nikki Turrisi</li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
+    <header>
+    <div class="flex">
+        <h1 class="name">Nikki Turrisi</li>
+    <nav class="main-nav">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
+    </nav>
   </div>
 
-  <header>
-    <img src="img/responsive-layout-profile.png" alt="photo" class="profile-image">
-    <p>"I am a front-end developer who loves responsive designa and css. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!"</p>
+    <div id="intro">
+      <img src="img/responsive-layout-profile.png" alt="photo" class="profile-image">
+      <p>"I am a front-end developer who loves responsive design and css. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!"</p>
+    </div>
+
   </header>
 
-  <main class="flex">
+  <div class="caps">
+    <h2>PORTFOLIO</h2>
+  </div>
 
-    <div class="card">
+  <main class="container">
+
+    <section class="">
       <img src="img/portfolio-1.png" alt="marketing page" class="photos">
       <h2>Marketing Page</h2>
       <p>This project shows the front page of a marketing website meant for a specific business I'm interesed in.</p>
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       <img src="img/portfolio-2.png" alt="search page" class="photos">
       <h2>Search Page</h2>
       <p>This project searches through a specific database to find information that the iser is trying to look up.</p>
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       <img src="img/portfolio-3.png" alt="travel app" class="photos">
       <h2>Travel App</h2>
       <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       <img src="img/portfolio-4.png" alt="map of favorites" class="photos">
       <h2>Map of Favorite Spots</h2>
       <p>This project uses mapping for my favorite spots in the city for a do-it-yourself walking tour.</p>
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       <img src="img/portfolio-5.png" alt="photo gallery" class="photos">
       <h2>Photo Gallery</h2>
       <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-    </div>
+    </section>
 
-    <div class="card">
+    <section class="card">
       <img src="img/portfolio-6.png" alt="calculator" class="photos">
       <h2>Calculator</h2>
       <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-    </div>
+    </section>
 
-    <div class="">
+  </main>
+
+    <section class="contact">
       <h2>Contact</h2>
       <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
       <p>Phone +(111)555-1234</p>
       <p>Email email@lala.com</p>
-    </div>
+    </section>
 
-  </main>
-  <footer>
-    <p> Nikki Turrisi</p>
-    <p> Back To Top </p>
-  </footer>
-  </body>
+
+    <footer>
+      <ul class="footer">
+        <li> Nikki Turrisi</li>
+        <li> Back To Top </li>
+        <li>Home</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </footer>
+  </section>
+ </body>
 </html>
