--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width", initial-scale=1>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   </head>
   <body>
 
+
+
+
     <header>
     <div class="flex">
-        <h1 class="name">Nikki Turrisi</li>
+        <h1>Nikki Turrisi</li>
     <nav class="main-nav">
+      <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -21,50 +25,54 @@
     </nav>
   </div>
 
+
     <div id="intro">
-      <img src="img/responsive-layout-profile.png" alt="photo" class="profile-image">
-      <p>"I am a front-end developer who loves responsive design and css. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!"</p>
+      <img class="profilepicture" src="img/responsive-layout-profile.png" alt="photo" class="profile-image">
+      <p class="intro">"Hi! I am a front-end developer who loves responsive design and css. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!"</p>
     </div>
 
   </header>
 
-  <div class="caps">
-    <h2>PORTFOLIO</h2>
+
+
+  <div class="portfolio">
+    <h2 id="portfolio">Portfolio</h2>
   </div>
+
 
   <main class="container">
 
-    <section class="">
+    <section class="marketing">
       <img src="img/portfolio-1.png" alt="marketing page" class="photos">
       <h2>Marketing Page</h2>
       <p>This project shows the front page of a marketing website meant for a specific business I'm interesed in.</p>
     </section>
 
-    <section class="card">
+    <section class="search">
       <img src="img/portfolio-2.png" alt="search page" class="photos">
       <h2>Search Page</h2>
       <p>This project searches through a specific database to find information that the iser is trying to look up.</p>
     </section>
 
-    <section class="card">
+    <section class="travel">
       <img src="img/portfolio-3.png" alt="travel app" class="photos">
       <h2>Travel App</h2>
       <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
     </section>
 
-    <section class="card">
+    <section class="map">
       <img src="img/portfolio-4.png" alt="map of favorites" class="photos">
       <h2>Map of Favorite Spots</h2>
       <p>This project uses mapping for my favorite spots in the city for a do-it-yourself walking tour.</p>
     </section>
 
-    <section class="card">
+    <section class="gallery">
       <img src="img/portfolio-5.png" alt="photo gallery" class="photos">
       <h2>Photo Gallery</h2>
       <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
     </section>
 
-    <section class="card">
+    <section class="calculator">
       <img src="img/portfolio-6.png" alt="calculator" class="photos">
       <h2>Calculator</h2>
       <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
@@ -72,23 +80,31 @@
 
   </main>
 
+
+
+    <section class="wrap">
+
     <section class="contact">
-      <h2>Contact</h2>
-      <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-      <p>Phone +(111)555-1234</p>
-      <p>Email email@lala.com</p>
+      <h3 id="contact">Contact</h3>
+      <p>If you are interested in chatting or want more information <br> about what I've been working on, I'd love to hear from you!</p>
+        <div class="address">
+          <a class="phone" href="tel:+1(111)555-1234">Phone &nbsp; <strong>+1(111)555-1234</strong></a><br/>
+          <a class="email" href="mailto:email@lala.com"> Email &nbsp; <strong>email@lala.com</strong></a>
+        </div>
     </section>
 
 
     <footer>
-      <ul class="footer">
-        <li> Nikki Turrisi</li>
-        <li> Back To Top </li>
-        <li>Home</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
-      </ul>
-    </footer>
+      <nav>
+        <ul class="footer">
+          <li class="foot-name"> Nikki Turrisi</li>
+          <li class="foot-top"><a href="#top">Back To Top </li>
+          <li class="hide"><a href="#top">Home</li>
+          <li class="hide"><a href="#portfolio">Portfolio</li>
+          <li class="hide"><a href="#contact">Contact</li>
+         </ul>
+       </nav>
+     </footer>
   </section>
  </body>
 </html>
