--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
     <div class="flex">
-        <h1>Nikki Turrisi</li>
+      <h1>Nikki Turrisi</h1>
     <nav class="main-nav">
       <ul>
         <li><a href="#home">Home</a></li>
@@ -34,6 +34,7 @@
   </header>
 
 
+  <div class="portfolio-wrapper">
 
   <div class="portfolio">
     <h2 id="portfolio">Portfolio</h2>
@@ -80,13 +81,14 @@
 
   </main>
 
+</div> <!---portfolio wrap--->
 
 
     <section class="wrap">
 
     <section class="contact">
       <h3 id="contact">Contact</h3>
-      <p>If you are interested in chatting or want more information <br> about what I've been working on, I'd love to hear from you!</p>
+      <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
         <div class="address">
           <a class="phone" href="tel:+1(111)555-1234">Phone &nbsp; <strong>+1(111)555-1234</strong></a><br/>
           <a class="email" href="mailto:email@lala.com"> Email &nbsp; <strong>email@lala.com</strong></a>
@@ -97,13 +99,30 @@
     <footer>
       <nav>
         <ul class="footer">
-          <li class="foot-name"> Nikki Turrisi</li>
-          <li class="foot-top"><a href="#top">Back To Top </li>
-          <li class="hide"><a href="#top">Home</li>
-          <li class="hide"><a href="#portfolio">Portfolio</li>
-          <li class="hide"><a href="#contact">Contact</li>
+          <li class="foot-name"><strong>Nikki Turrisi</strong></li>
+          <li class="foot-top"><a href="#top"><strong>Back To Top</strong></a></li>
+          <li class="hide"><a href="#top"><strong>Home</strong></a></li>
+          <li class="hide"><a href="#portfolio"><strong>Portfolio</strong></a></li>
+          <li class="hide"><a href="#contact"><strong>Contact</strong></a></li>
          </ul>
        </nav>
+
+       <!--
+
+<div class="footer-wrapper">
+  <div class="footer-left" style="width: 50%;">
+    Nikki Turrisi
+  </div>
+  <div class="footer-top" style="width: 50%;">
+    <a href="#top">Back To Top<</a>
+  </div
+  <ul class="footer-right" style="width: 50%;">
+    <li><a href="#top">Home</a><
+    <a href="#portfolio">Portfolio</a>
+    <a href="#contact">Contact</a>
+  </div>
+</div>
+       -->
      </footer>
   </section>
  </body>
