Last minute updates

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
-<!DOC TYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Responsive Website</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1>
-    <link rel="stylesheet" href="css/normalize.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   </head>
   <body>
-
-
 
 
     <header>
@@ -27,7 +24,7 @@
 
 
     <div id="intro">
-      <img class="profilepicture" src="img/responsive-layout-profile.png" alt="photo" class="profile-image">
+      <img class="profilepicture" src="img/responsive-layout-profile.png" alt="photo">
       <p class="intro">"Hi! I am a front-end developer who loves responsive design and css. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!"</p>
     </div>
 
@@ -81,13 +78,11 @@
 
   </main>
 
-</div> <!---portfolio wrap--->
+</div>
 
-
-    <section class="wrap">
 
     <section class="contact">
-      <h3 id="contact">Contact</h3>
+      <h3> id="contact">Contact</h3>
       <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
         <div class="address">
           <a class="phone" href="tel:+1(111)555-1234">Phone &nbsp; <strong>+1(111)555-1234</strong></a><br/>
@@ -106,24 +101,6 @@
           <li class="hide"><a href="#contact"><strong>Contact</strong></a></li>
          </ul>
        </nav>
-
-       <!--
-
-<div class="footer-wrapper">
-  <div class="footer-left" style="width: 50%;">
-    Nikki Turrisi
-  </div>
-  <div class="footer-top" style="width: 50%;">
-    <a href="#top">Back To Top<</a>
-  </div
-  <ul class="footer-right" style="width: 50%;">
-    <li><a href="#top">Home</a><
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </div>
-</div>
-       -->
      </footer>
-  </section>
  </body>
 </html>
