--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
     <section class="contact">
-      <h3> id="contact">Contact</h3>
+      <h3>Contact</h3>
       <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
         <div class="address">
           <a class="phone" href="tel:+1(111)555-1234">Phone &nbsp; <strong>+1(111)555-1234</strong></a><br/>
